--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,9 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon_light_sm.ico" media="(prefers-color-scheme: light)" />
-    <link rel="icon" type="image/x-icon"  href="/favicon_dark_sm.ico" media="(prefers-color-scheme: dark)" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="/favicon_light_sm.ico"
+      media="(prefers-color-scheme: light)"
+    />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="/favicon_dark_sm.ico"
+      media="(prefers-color-scheme: dark)"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SignaAlchemist</title>
   </head>
